Support multiple simultaneous chat clients
Allow the server to accept multiple client connections in parallel and keep client state isolated per connection. This resolves issue #22.\n\nCo-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>